<resources>
    <string name="app_name">TicTacToe</string>
    <string name="new_game">New Game</string>
    <string name="exit_game">Exit Game</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">info</string>
    <string name="human">You:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Android:  </string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!-- Splash screen  [CHAR LIMIT=20] -->
    <string name="developer">Developer: Najeeb Chaudhry\n\tnajeeb3kz@gmail.com</string>

    <!-- Splash screen [CHAR LIMIT=20] -->
    <string name="tic_tac_toe">TicTacToe!</string>

    <string name="action_settings">Settings</string>

    <string name="app_logo_description">App Logo</string>
</resources>
