<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashScreenLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.chaudhry.najeeb.tictactoe.SplashScreenActivity">

    <ImageView
        android:id="@+id/splashScreenImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_logo_description"
        android:scaleType="centerInside"
        android:src="@drawable/j_1144x1144" />

    <TextView
        android:id="@+id/splashScreenTicTacToeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/splash_screen_tictactoe_textView"
        android:padding="20dp"
        android:text="@string/tic_tac_toe"
        android:textColor="@color/splash_screen_developer_info_textView"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splashScreenDeveloperInfoTextVeiw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/splash_screen_developer_info_textView" />

</LinearLayout>
